correction bug fichier